--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ nav > button {
   padding: 64px 0px;
 }
 
+.intro-box p {
+  font-size: 24px;
+}
+
 .hero-text {
   font-weight: bold;
   color: black;
