--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,9 @@ nav > button {
 
 .intro-box {
   padding: 64px 0px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em
 }
 
 .intro-box p {
@@ -57,4 +60,11 @@ nav > button {
 
 .muted {
   color: #555;
+}
+
+.intro-images {
+  border: 1px solid black;
+  display: grid;
+  place-items: center;
+  background-color: #eee;
 }
