--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,16 @@ nav > button {
   place-items: center;
   background-color: #eee;
 }
+
+.showcase-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+}
+
+.showcase-box > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
