Add text shadow for .dev in title

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ header {
   align-items: flex-end;
 }
 
+.invertable {
+  text-shadow: var(--shadow-size-neg) var(--shadow-size-neg) rgb(255, 157, 0), var(--shadow-size) var(--shadow-size) rgb(125, 177, 255);
+}
+
 .invertable:hover {
   text-shadow: var(--shadow-size-neg) var(--shadow-size-neg) rgb(125, 177, 255), var(--shadow-size) var(--shadow-size) rgb(255, 157, 0);
 }
@@ -19,7 +23,10 @@ h1 {
   margin: 0px;
   cursor: default;
   font-size: 64px;
-  text-shadow: var(--shadow-size-neg) var(--shadow-size-neg) rgb(255, 157, 0), var(--shadow-size) var(--shadow-size) rgb(125, 177, 255);
+}
+
+h1 .muted {
+  text-shadow: 2px 2px rgb(202, 202, 202);
 }
 
 nav {
