--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ header {
 
 .invertable:hover {
   text-shadow: var(--shadow-size-neg) var(--shadow-size-neg) rgb(125, 177, 255), var(--shadow-size) var(--shadow-size) rgb(255, 157, 0);
+  transform: scale(1.3);
 }
 
 h1 {
