--- a/src/App.css
+++ b/src/App.css
@@ -50,15 +50,14 @@ nav > a.contact {
 
 nav > a {
   padding: 8px;
-  border: 2px solid transparent
 }
 
 nav > a.active {
-  border: 2px solid black;
+  outline: 2px solid black !important;
 }
 
 nav > a:hover {
-  border: 2px dotted grey;
+  outline: 2px dotted grey;
 }
 
 h2 {
