--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@ h2 {
   margin-top: 0;
 }
 
+/* Home Page Main Content */
+
 .intro-box {
   padding: 64px 0px;
   display: grid;
@@ -103,4 +105,28 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Project Page */
+
+.project-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 2em
+}
+
+.project-item {
+  border: 1px solid rgb(232, 232, 232);
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 1em;
+}
+
+h3 {
+  margin: 0;
+  border-bottom: 1px solid rgb(0, 0, 0);;
 }
